[package]
name = "bread"
version = "0.1.0"
authors = ["Silvus <renkenor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3"
rand = { version = "0.7", features = ["small_rng"] }
image = "0.23"
byteorder = "1"
crossbeam = "0.8"
clt = "0.0.6"