[package]
name = "bread"
version = "0.1.0"
authors = ["Silvus <renkenor@gmail.com>"]
edition = "2018"

[lib]
name = "bread"
path = "src/lib.rs"

[[bin]]
name = "generate"
path = "src/generate/generate.rs"
[[bin]]
name = "render"
path = "src/render/render.rs"

[dependencies]
num = "0.3"
rand = { version = "0.8", features = ["small_rng"] }
image = "0.23"
crossbeam = "0.8"
clt = "0.0.6"
rand_distr = "0.4"